KLSC: Fix spacing of title face

--- a/main.scss
+++ b/main.scss
@@ -28,15 +28,16 @@ body {
     margin: auto;
     .title {
         text-align: center;
+        margin-top: 25px;
     }
     .profile-img-container {
         height: 200px;
         img {
-            margin: 10px 125px ;
+            margin: 10px 100px ;
             border: 5px solid $textColour;
             border-radius: 50%;
-            height: 150px;
-            width: 150px;
+            height: 200px;
+            width: 200px;
             object-fit: cover;
             border-width: 4px;
         }
